[package]
name = "gam-cli"
version = "0.3.148"
edition = "2024"
rust-version = "1.93"
publish = false

[[bin]]
name = "gam"
path = "src/main.rs"

[dependencies]
gam = { path = "../.." }
gam-data = { path = "../gam-data" }
gam-predict = { path = "../gam-predict" }
gam-runtime = { path = "../gam-runtime" }
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
csv = "1.4.0"
faer = "0.24.0"
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rand = "0.10.1"
rayon = "1.12.0"
statrs = "0.18.0"
thiserror = "2.0.18"

[dev-dependencies]
# The binary's `#[cfg(test)] mod cli_tests` pulls in the shared CLI test suite
# (tests/src_modules/misc/cli_tests.rs) by `#[path]` (see src/main.rs). That
# suite synthesises data with `rand_distr` and writes scratch files with
# `tempfile`; both were dev-deps of the monolithic gam crate that originally
# compiled the suite, and must follow it here. Versions match the workspace root.
rand_distr = "0.6.0"
tempfile = "3.27.0"

[lints.rust]
warnings = "deny"
