[package]
name = "gam-config"
version = "0.3.133"
edition = "2024"
rust-version = "1.93"
description = "Shared JSON to FitConfig resolver for the gam CLI and Python FFI"
license = "AGPL-3.0-or-later"

[lints.rust]
warnings = "deny"

[dependencies]
gam-problem = { path = "../gam-problem", version = "=0.3.133" }
gam-solve = { path = "../gam-solve", version = "=0.3.133" }
gam-models = { path = "../gam-models", version = "=0.3.133" }
gam-gpu = { path = "../gam-gpu", version = "=0.3.133" }
gam-inference = { path = "../gam-inference", version = "=0.3.133" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
log = "0.4.29"
