[package]
name = "gam-config"
version = "0.3.148"
edition = "2024"
rust-version = "1.93"
description = "Canonical multi-front-end parsing and normalization for gam FitConfig"
license = "AGPL-3.0-or-later"

[lints.rust]
warnings = "deny"

[dependencies]
gam-problem = { path = "../gam-problem", version = "=0.3.148" }
gam-solve = { path = "../gam-solve", version = "=0.3.148" }
gam-models = { path = "../gam-models", version = "=0.3.148" }
gam-gpu = { path = "../gam-gpu", version = "=0.3.148" }
gam-inference = { path = "../gam-inference", version = "=0.3.148" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
