[package]
name = "gam-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "Foundational shared types for the gam workspace (issue #1521 phase-1 leaf crate)."
license = "AGPL-3.0-or-later"

# Foundational leaf of the workspace split (issue #1521). Window 1 owns the two
# fully leaf-clean modules `types` and `resource`: every downstream crate
# (linalg → gpu → solver → terms → families → inference → gam) names this leaf
# instead of forcing `crate::`-cycles through each other, so a change to a
# family/term no longer recompiles these near-static types. `gam` re-exports
# both modules, so existing `crate::types::*`/`crate::resource::*` paths in the
# 130 consuming files resolve unchanged — no tree-wide rewrite. `model_types`
# and the other layers move in later windows.
[lib]
name = "gam_core"
path = "src/lib.rs"

[lints.rust]
warnings = "deny"

# Versions/features pinned to match the root `gam` crate so the shared
# Cargo.lock resolves to a single copy of each dependency. `ndarray`'s `serde`
# feature backs the `#[derive(Serialize)]` on the `Array1`-carrying types;
# `rayon` matches the workspace-wide ndarray feature set.
[dependencies]
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
