[package]
name = "gam-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false
description = "Foundational shared types for the gam workspace (issue #1521 phase-1 leaf crate)."
license = "AGPL-3.0-or-later"

# SCAFFOLD ONLY (issue #1521). This crate is the planned foundation of the
# workspace split: `types.rs`, `resource.rs`, `model_types`, and the shared
# error enums move here so every downstream crate (linalg → gpu → solver →
# terms → families → inference → gam) depends on a leaf that almost never
# churns, making the common-case recompile incremental instead of a ~15-minute
# full rebuild. The MOVES are a serializing, tree-wide `use crate::` rewrite and
# are held until the maintainer declares a quiet window (post-#932). Until then
# this crate is intentionally near-empty so the skeleton can land additively
# without conflicting with the agents currently editing the monolith.
[lib]
name = "gam_core"
path = "src/lib.rs"

[lints.rust]
warnings = "deny"

# Pinned to the root crate so the shared Cargo.lock resolves a single copy.
[dependencies]
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
