[package]
name = "gam-custom-family"
version = "0.3.124"
edition = "2024"
rust-version = "1.93"

[lints.rust]
warnings = "deny"


[dependencies]
faer = "0.24.0"
gam-identifiability = { path = "../gam-identifiability", version = "=0.3.124" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.124" }
gam-model-api = { path = "../gam-model-api", version = "=0.3.124" }
gam-problem = { path = "../gam-problem", version = "=0.3.124" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.124" }
gam-solve = { path = "../gam-solve", version = "=0.3.124" }
gam-spec = { path = "../gam-spec", version = "=0.3.124" }
gam-terms = { path = "../gam-terms", version = "=0.3.124" }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"

[dev-dependencies]
approx = "0.5.1"
# Dev-only cycle (permitted by Cargo): the carrier's `tests` module fits real
# gamlss/wiggle families that live in `gam-models`, which normally-depends on
# this crate. The cycle closes through dev-dependencies only.
gam-models = { path = "../gam-models", version = "=0.3.124" }
gam-test-support = { path = "../gam-test-support", version = "=0.3.124" }
