[package]
name = "gam-data"
version = "0.3.123"
edition = "2024"
rust-version = "1.93"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { version = "54", default-features = false, features = ["ffi"] }
csv = "1.4.0"
log = "0.4.29"
memmap2 = "0.9.10"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
warnings = "deny"
