[package]
name = "gam-data"
version = "0.3.137"
edition = "2024"
rust-version = "1.93"
description = "Data ingestion and encoding foundation crate for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { version = "54", default-features = false, features = ["ffi"] }
csv = "1.4.0"
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"

[lints.rust]
warnings = "deny"
