[package]
name = "gam-geometry"
version = "0.3.124"
edition = "2024"
rust-version = "1.93"
description = "Riemannian-manifold geometry (charts, exp/log maps, Fréchet means, curvature estimands) for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lints.rust]
warnings = "deny"

[dependencies]
faer = "0.24.0"
libm = "0.2.16"
gam-linalg = { path = "../gam-linalg", version = "=0.3.124" }
gam-math = { path = "../gam-math", version = "=0.3.124" }
gam-spec = { path = "../gam-spec", version = "=0.3.124" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
