[package]
name = "gam-linalg"
version = "0.3.123"
edition = "2024"
rust-version = "1.93"

[lints.rust]
warnings = "deny"

[features]
# Exposes `gam_linalg::test_support` (operator-backed design fixtures) to
# downstream crates' tests. Off by default so the fixtures never reach a
# release build or the published `.crate`; enable it from a `[dev-dependencies]`
# entry, not `[dependencies]`.
test-support = []

[dependencies]
dyn-stack = "0.13.2"
faer = "0.24.0"
gam-runtime = { path = "../gam-runtime" }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
num-traits = "0.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
wide = "0.7"
