[package]
name = "gam-linalg"
version = "0.3.142"
edition = "2024"
rust-version = "1.93"
description = "Dense/sparse linear-algebra and ridge-solver foundation for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lints.rust]
warnings = "deny"

[dependencies]
dyn-stack = "0.13.2"
faer = "0.24.0"
gam-runtime = { path = "../gam-runtime", version = "=0.3.142" }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
