[package]
name = "gam-math"
version = "0.3.149"
edition = "2024"
rust-version = "1.93"
description = "Hand-derived analytic-derivative jet/Taylor-tower machinery for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]
libm = "0.2.16"
statrs = "0.18.0"
wide = "0.7"

[lints.rust]
warnings = "deny"
