[package]
name = "gam-model-api"
version = "0.3.149"
edition = "2024"
description = "Model and custom-family trait API and contracts for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lints.rust]
warnings = "deny"

[dependencies]
gam-linalg = { path = "../gam-linalg", version = "=0.3.149" }
gam-problem = { path = "../gam-problem", version = "=0.3.149" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.149" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"
