[package]
name = "gam-model-kernels"
version = "0.3.149"
edition = "2024"
description = "Shared model-kernel base crate for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"
rust-version = "1.93"

[lints.rust]
warnings = "deny"

[dependencies]
gam-linalg = { path = "../gam-linalg", version = "=0.3.149" }
gam-math = { path = "../gam-math", version = "=0.3.149" }
gam-problem = { path = "../gam-problem", version = "=0.3.149" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.149" }
gam-solve = { path = "../gam-solve", version = "=0.3.149" }
libm = "0.2.16"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
opt.workspace = true
smallvec = "1"
wide = "1.5"
