[package]
name = "gam-models"
version = "0.3.150"
edition = "2024"
description = "Model families (GAMLSS, survival location-scale, BMS) for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"
rust-version = "1.93"

[lints.rust]
warnings = "deny"

[dependencies]
faer = "0.24.0"
gam-data = { path = "../gam-data", version = "=0.3.149" }
gam-geometry = { path = "../gam-geometry", version = "=0.3.150" }
gam-gpu = { path = "../gam-gpu", version = "=0.3.150" }
gam-custom-family = { path = "../gam-custom-family", version = "=0.3.150" }
gam-identifiability = { path = "../gam-identifiability", version = "=0.3.150" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.150" }
gam-math = { path = "../gam-math", version = "=0.3.150" }
gam-row-macros = { path = "../gam-row-macros", version = "=0.3.150" }
opt.workspace = true
gam-model-api = { path = "../gam-model-api", version = "=0.3.150" }
gam-model-kernels = { path = "../gam-model-kernels", version = "=0.3.150" }
gam-problem = { path = "../gam-problem", version = "=0.3.150" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.150" }
gam-solve = { path = "../gam-solve", version = "=0.3.150" }
gam-spec = { path = "../gam-spec", version = "=0.3.150" }
gam-terms = { path = "../gam-terms", version = "=0.3.150" }
libm = "0.2.16"
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
smallvec = "1"
statrs = "0.18.0"
thiserror = "2.0.18"
wide = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc.workspace = true

[dev-dependencies]
approx = "0.5.1"
csv = "1.4.0"
gam-test-support = { path = "../gam-test-support" }
num-dual = "0.14.1"
tempfile = "3.27.0"
