[package]
name = "gam-optimize"
version = "0.3.148"
edition = "2024"
rust-version = "1.93"
description = "Shared numerical-optimization primitives (Armijo backtracking line search, geometric ridge escalation, named tuning constants) for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]

[lints.rust]
warnings = "deny"
