[package]
name = "gam-predict"
version = "0.3.149"
edition = "2024"
rust-version = "1.93"
publish = false

[lib]

[dependencies]
gam-data = { path = "../gam-data" }
gam-inference = { path = "../gam-inference" }
gam-linalg = { path = "../gam-linalg" }
gam-math = { path = "../gam-math" }
gam-model-kernels = { path = "../gam-model-kernels" }
gam-models = { path = "../gam-models" }
gam-problem = { path = "../gam-problem" }
gam-runtime = { path = "../gam-runtime" }
gam-solve = { path = "../gam-solve" }
gam-spec = { path = "../gam-spec" }
gam-terms = { path = "../gam-terms" }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
statrs = "0.18.0"

[dev-dependencies]
# `linalg.rs` unit tests assemble sparse `DesignMatrix` fixtures directly from
# faer triplets, so faer is a genuine test-only dependency.
faer = "0.24.0"
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }

[lints.rust]
warnings = "deny"
