[package]
name = "gam-predict"
version = "0.3.149"
edition = "2024"
rust-version = "1.93"
description = "Prediction, posterior bands, and conformal intervals for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"

[lib]

[dependencies]
gam-data = { path = "../gam-data", version = "=0.3.149" }
gam-inference = { path = "../gam-inference", version = "=0.3.149" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.149" }
gam-math = { path = "../gam-math", version = "=0.3.149" }
gam-model-kernels = { path = "../gam-model-kernels", version = "=0.3.149" }
gam-models = { path = "../gam-models", version = "=0.3.149" }
gam-problem = { path = "../gam-problem", version = "=0.3.149" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.149" }
gam-solve = { path = "../gam-solve", version = "=0.3.149" }
gam-spec = { path = "../gam-spec", version = "=0.3.149" }
gam-terms = { path = "../gam-terms", version = "=0.3.149" }
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
# `linalg.rs` unit tests assemble sparse `DesignMatrix` fixtures directly from
# faer triplets, so faer is a genuine test-only dependency.
faer = "0.24.0"
rand = "0.10.1"
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }

[lints.rust]
warnings = "deny"
