[package]
name = "gam-problem"
version = "0.3.124"
edition = "2024"
rust-version = "1.93"
description = "Neutral solver/criterion contract types for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]
faer = "0.24.0"
gam-linalg = { path = "../gam-linalg", version = "=0.3.124" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rayon = "1.12.0"

[lints.rust]
warnings = "deny"
