[package]
name = "gam-problem"
version = "0.3.149"
edition = "2024"
rust-version = "1.93"
description = "Neutral solver/criterion contract types for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"

[lib]
path = "src/lib.rs"

[dependencies]
faer = "0.24.0"
gam-geometry = { path = "../gam-geometry", version = "=0.3.149" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.149" }
gam-spec = { path = "../gam-spec", version = "=0.3.149" }
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
opt.workspace = true
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }

[lints.rust]
warnings = "deny"
