[package]
name = "gam-pyffi"
version = "0.1.64"
edition = "2024"
rust-version = "1.93"
publish = false
description = "PyO3 bindings for the gam crate — backs gamfit's _rust extension."
license = "AGPL-3.0-or-later"

[lib]
name = "gam_pyffi"
crate-type = ["cdylib"]

[dependencies]
gam = { path = "../.." }
pyo3 = { version = "0.28.0", features = ["abi3-py310", "extension-module"] }
numpy = "0.28.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ndarray = "0.17.2"
faer = "0.24.0"
log = "0.4"
