[package]
name = "gam-pyffi"
version = "0.1.243"
edition = "2024"
rust-version = "1.93"
publish = false
description = "PyO3 bindings for the gam crate — backs gamfit's _rust extension."
license = "AGPL-3.0-or-later"

[lib]
name = "gam_pyffi"
# `cdylib` is what maturin packages into the `gamfit._rust` wheel. `rlib` is
# added so `cargo test -p gam-pyffi` can build a unit-test harness against the
# crate — a `cdylib`-only crate produces no test binary, which is why the
# survival-surface / latent-stationarity `#[test]`s (issues #954/#964/#965/#966)
# were silently never exercised by CI.
crate-type = ["cdylib", "rlib"]

[dependencies]
gam = { path = "../.." }
gam-predict = { path = "../gam-predict" }
gam-runtime = { path = "../gam-runtime" }
# `extension-module` tells PyO3 NOT to link libpython (the host interpreter
# supplies the symbols at import time). That is correct for the published wheel
# but makes a standalone `cargo test` binary fail to link. So it lives behind a
# default-on Cargo feature (the maturin/PyO3-recommended layout): maturin builds
# with default features → the wheel is unchanged, while
# `cargo test --no-default-features` drops it so the test harness links
# libpython and the gam-pyffi unit tests actually run. See `[features]` below.
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
numpy = "0.29.0"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ndarray = "0.17.2"
log = "0.4.29"
rayon = "1.12.0"
faer = "0.24.0"
statrs = "0.18.0"
rand = "0.10.1"
rand_distr = "0.6.0"

[features]
# Default-on so `maturin build`/`pip install` (which build with default
# features) produce a proper Python extension module. `cargo test
# --no-default-features` turns it off so the unit-test harness links libpython
# instead of relying on the host interpreter, letting the crate's `#[test]`s run.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
