[package]
name = "gam-report"
version = "0.3.148"
edition = "2024"
rust-version = "1.93"
description = "Human-readable fit/diagnostic report rendering for the gam engine"
license = "AGPL-3.0-or-later"

[lints.rust]
warnings = "deny"

[dependencies]
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
