[package]
name = "gam-sae"
version = "0.3.141"
edition = "2024"
description = "Sparse-autoencoder latent-manifold terms for the gam penalized-likelihood engine"
license = "AGPL-3.0-or-later"
repository = "https://github.com/SauersML/gam"
rust-version = "1.93"

[dependencies]
faer = "0.24.0"
gam-gpu = { path = "../gam-gpu", version = "=0.3.141" }
gam-identifiability = { path = "../gam-identifiability", version = "=0.3.141" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.141" }
gam-math = { path = "../gam-math", version = "=0.3.141" }
gam-problem = { path = "../gam-problem", version = "=0.3.141" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.141" }
gam-solve = { path = "../gam-solve", version = "=0.3.141" }
gam-terms = { path = "../gam-terms", version = "=0.3.141" }
log = "0.4.29"
memmap2 = "0.9.10"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
rand = "0.10.1"
rayon = "1.12.0"
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
statrs = "0.18.0"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19.6", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cublas", "cublaslt", "cusparse", "cusolver", "cusolvermg", "curand", "nvtx", "cupti", "fallback-dynamic-loading", "cuda-12080"] }

[dev-dependencies]
approx = "0.5.1"

[lints.rust]
warnings = "deny"
