[package]
name = "gam-solve"
version = "0.3.124"
edition = "2024"
rust-version = "1.93"

[lints.rust]
warnings = "deny"

[dependencies]
crossterm = "0.29.0"
dyn-stack = "0.13.2"
faer = "0.24.0"
gam-data = { path = "../gam-data", version = "=0.3.124" }
gam-geometry = { path = "../gam-geometry", version = "=0.3.124" }
gam-gpu = { path = "../gam-gpu", version = "=0.3.124" }
gam-identifiability = { path = "../gam-identifiability", version = "=0.3.124" }
gam-linalg = { path = "../gam-linalg", version = "=0.3.124" }
gam-math = { path = "../gam-math", version = "=0.3.124" }
gam-model-api = { path = "../gam-model-api", version = "=0.3.124" }
gam-problem = { path = "../gam-problem", version = "=0.3.124" }
gam-runtime = { path = "../gam-runtime", version = "=0.3.124" }
gam-spec = { path = "../gam-spec", version = "=0.3.124" }
gam-terms = { path = "../gam-terms", version = "=0.3.124" }
libm = "0.2.16"
log = "0.4.29"
ndarray = { version = "0.17.2", features = ["serde", "rayon"] }
opt = "0.5.2"
ratatui = "0.30.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["float_roundtrip"] }
smallvec = "1"
statrs = "0.18.0"
thiserror = "2.0.18"

[target.'cfg(target_os = "linux")'.dependencies]
cudarc = { version = "0.19.6", default-features = false, features = ["std", "driver", "runtime", "nvrtc", "cublas", "cublaslt", "cusparse", "cusolver", "cusolvermg", "curand", "nvtx", "cupti", "fallback-dynamic-loading", "cuda-12080"] }

[dev-dependencies]
approx = "0.5.1"
gam-test-support = { path = "../gam-test-support", version = "=0.3.124" }
